commit #5 - moved unused images into folder. Fixed links on modal. edited card images sizing.

--- a/Loomit2/index.html
+++ b/Loomit2/index.html
@@ -104,7 +104,7 @@
                     <div class="card mb-3 font2 text-center">
                         <a href="https://www.fs.usda.gov/recarea/giffordpinchot/recreation/camping-cabins/recarea/?recid=31180&actid=29"
                             target="_blank">
-                            <img class="card-img-top" src="images/gp_northFork.jpg" alt="North Fork Campground Sign">
+                            <img class="card-img-top" src="images/gp_northFork.png" alt="North Fork Campground Sign">
                         </a>
                         <div class="card-body">
                             <h4 class="card-title font1">Camping & Backpacking</h4>
@@ -124,7 +124,7 @@
                 <div class="col-md-6 col-lg-4 row-eq-height">
                     <div class="card mb-3 font2 text-center">
                             <a href="https://www.mshinstitute.org/explore/climbing-permits/" target="_blank">
-                        <img class="card-img-top" src="images/helens_top.jpg" alt="Hikers at the top of St. Helens">
+                        <img class="card-img-top" src="images/helens_top.png" alt="Hikers at the top of St. Helens">
                             </a>
                         <div class="card-body">
                             <h4 class="card-title font1">Climbing</h4>
@@ -145,7 +145,7 @@
                     <div class="card mb-3 font2 text-center">
                         <a href="https://www.fs.usda.gov/recarea/giffordpinchot/recreation/hiking/recarea/?recid=34143&actid=51"
                            target="_blank">
-                            <img class="card-img-top" src="images/atAdams.jpg" alt="Viewpoint looking at Adams">
+                            <img class="card-img-top" src="images/atAdams.png" alt="Viewpoint looking at Adams">
                         </a>
                         <div class="card-body">
                             <h4 class="card-title font1">Hiking</h4>
@@ -168,7 +168,7 @@
                     <div class="card mb-3 font2 text-center">
                         <a href="https://www.fs.usda.gov/activity/giffordpinchot/recreation/wintersports"
                            target="_blank">
-                            <img class="card-img-top" src="images/splitboard.jpg"
+                            <img class="card-img-top" src="images/splitboard.png"
                                 alt="Man Standing on Splitboard on ridge">
                         </a>
                         <div class="card-body">
@@ -189,7 +189,7 @@
                     <div class="card mb-3 font2 text-center">
                         <a href="https://www.fs.usda.gov/activity/giffordpinchot/recreation/otheractivities/?recid=31178&actid=102"
                            target="_blank">
-                            <img class="card-img-top" src="images/Ape_Cave.jpg"
+                            <img class="card-img-top" src="images/Ape_Cave.png"
                              alt="Entrance to Ape Caves">
                         </a>
                         <div class="card-body">
@@ -288,8 +288,8 @@
 
                     <div class="col-sm col-md font2 text-center">
                         <p class="font1"><strong>Mount St. Helens National Volcanic Monument Headquarters</strong></p>
-                        <p><a href="https://goo.gl/maps/bx8MHCuqxtT2" class="badge badge-pill badge-primary p-2">
-                            Open in Google Maps</a></p>
+                        <p><a href="https://goo.gl/maps/bx8MHCuqxtT2" class="badge badge-pill badge-primary p-2"
+                        target="_blank">Open in Google Maps</a></p>
                         <p>42218 NE Yale Bridge Rd.<br>
                             Amboy, WA 98601</p>
                         <p>(360) 449-7800</p>
@@ -299,7 +299,7 @@
                     <div class="col-sm col-md font2 text-center">
                         <p class="font1"><strong>Johnston Ridge Observatory and Visitors Center</strong></p>
                         <p><a href="https://goo.gl/maps/YijL8XECHon"
-                              class="badge badge-pill badge-primary p-2">Open in Google Maps</a></p>
+                              class="badge badge-pill badge-primary p-2" target="_blank">Open in Google Maps</a></p>
                         <p>24000 Spirit Lake Highway<br>
                             Toutle, WA 98649</p>
                         <p>(360) 274-2140</p>
@@ -310,7 +310,7 @@
                     <div class="col-sm col-md font2 text-center">
                         <p class="font1"><strong>Mount St. Helens Visitor Center At Silver Lake</strong></p>
                         <p><a href="https://goo.gl/maps/Y8yczUvhu2K2"
-                              class="badge badge-pill badge-primary p-2">Open in Google Maps</a></p>
+                              class="badge badge-pill badge-primary p-2" target="_blank">Open in Google Maps</a></p>
                         <p>3029 Spirit Lake Highway<br>
                             Castle Rock, WA 98611</p>
                         <p>(360) 274-0962</p>
@@ -320,7 +320,7 @@
                     <div class="col-sm col-md font2 text-center">
                         <p class="font1"><strong>Pine Creek Information Center</strong></p>
                         <p><a href="https://goo.gl/maps/PJ7funSG1PA2"
-                              class="badge badge-pill badge-primary p-2">Open in Google Maps</a></p>
+                              class="badge badge-pill badge-primary p-2" target="_blank">Open in Google Maps</a></p>
                         <p>From Cougar, WA take Lewis River Road/Forest Road 90 east for 18.4 Miles.</p>
                         <p> Only open when accessable, usually Spring through late Fall.<br>
                         Open Daily, 10am to 5pm</p>
@@ -403,26 +403,28 @@
                             <h4 class="mb-3 font1">Permit directory</h4>
                             <div class="font2">
                                 <p>Follow the links below to the agency managing the permit</p>
-                                <a href="https://www.fs.usda.gov/land/giffordpinchot/landmanagement"
+                                <a href="https://www.mshinstitute.org/explore/climbing-permits/"
                                     class="list-group-item list-group-item-action" target="_blank"><strong>
-                                    Summer Parking Permit</strong>: Permit for April 1st - October 31st, $22/permit</a>
-                                <a href="https://www.fs.usda.gov/main/giffordpinchot/learning"
+                                    Summit Climbing Pass</strong>: Permit for April 1st - October 31st, $22/permit</a>
+                                <a href="http://www.discovernw.org/store_national-forest-recreation-epass-national-forests-in-washington-and-oregon-only_20281.html"
                                     class="list-group-item list-group-item-action" target="_blank"><strong>
-                                    Climbers Bivouac Parking Permit</strong>: $5/day</a>
-                                <a href="https://www.fs.usda.gov/main/giffordpinchot/workingtogether"
+                                    One Day Parking Permit</strong>: $5/day</a>
+                                <a href="https://store.usgs.gov/forest-pass"
                                     class="list-group-item list-group-item-action" target="_blank"><strong>
                                     Annual Northwest Forest Pass</strong>: Parking pass good for OR and WA Forests,
                                     $30/year</a>
-                                <a href="https://volcanoes.usgs.gov/volcanoes/st_helens/status.html"
+                                <a href="http://www.discovernw.org/store_america-the-beautiful-2012-national-parks-and-federal-recreational-lands-annual-pass_17260.html"
                                     class="list-group-item list-group-item-action" target="_blank"><strong>
                                     Interagency America The Beautiful pass</strong>: Parking pass good for all National
-                                    Forests, $80/year</a>
-                                <a href="https://volcanoes.usgs.gov/volcanoes/st_helens/status.html"
+                                    Parks and Federal Rec Lands, $80/year</a>
+                                <a href="https://fortress.wa.gov/parks/ecomm/prod/Store/SNO/SnoChoice.aspx"
                                     class="list-group-item list-group-item-action" target="_blank"><strong>
-                                    Winter Sno-Park Parking Permit</strong>: Permit for Nov 1st - March 31st, $20/day</a>
+                                    Winter Sno-Park Parking Permit</strong>: Permit for Nov 1st - March 31st,
+                                    $20/day</a>
                                 <a href="https://www.recreation.gov/"
                                     class="list-group-item list-group-item-action" target="_blank"><strong>
-                                    Camping and Backpacking permits</strong>: Price and Availability varies</a>
+                                    Camping Reservations and Backpacking Permits</strong>: Price and Availability
+                                    varies</a>
                             </div>
                             <!-- /permit directory -->
 
