commit #6 - minor cleanup

--- a/Loomit2/index.html
+++ b/Loomit2/index.html
@@ -19,8 +19,7 @@
                 <a class="navbar-brand order-1 mr-0 font1" href="https://www.fs.usda.gov/main/giffordpinchot/home"
                    target="_blank">Gifford Pinchot National Forest</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                        data-target="#navbarNavAltMarkup">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -41,7 +40,7 @@
             <div class="container text-sm-center pt-5">
                 <h2 class="display-3 font1 jumbotron-text">Mount St. Helens National Volcanic Monument</h2>
                 <p class="lead font-weight-bold font2">Gifford Pinchot National Forest</p>
-                <div class="btn-group mt-4" role="group" aria-label="Callout buttons">
+                <div class="btn-group mt-4" role="group">
                     <button type="button" class="btn btn-info btn-lg font2" data-toggle="modal"
                             data-target="#permits">Find Passes & Permits</button>
                 </div>
@@ -346,7 +345,7 @@
                                 <button type="button" class="btn btn-outline-secondary">Other Local Areas</button>
                                 <button type="button"
                                         class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split"
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        data-toggle="dropdown">
                                     <span class="sr-only">Toggle Dropdown</span>
                                 </button>
                                 <div class="dropdown-menu">
